# smart_sensor

./: .gitignore  CMakeLists.txt  Makefile  sdkconfig  sdkconfig.old
.github/workflows/: github-action-demo.yml
components/blufi/: CMakeLists.txt  Kconfig.projbuild  blufi.c  blufi.h  blufi_init.c
components/dht11/: CMakeLists.txt  dht11.c
components/server/: CMakeLists.txt  taskServer.c
components/ssd1306/: ssd1306.c  ssd1306.h
components/taskAdcRead/: CMakeLists.txt  taskAdcRead.c  taskAdcRead.h
components/taskDHT11/: CMakeLists.txt  taskDHT11.c  taskDHT11.h
components/taskMqtt/: CMakeLists.txt  taskMqtt.c  taskMqtt.h
components/taskOledDisplay/: CMakeLists.txt  taskOledDisplay.c  taskOledDisplay.h
components/taskOta/: CMakeLists.txt  Kconfig.projbuild  taskOta.c  taskOta.h
components/taskServer/: taskServer.h
components/taskStmp/: CMakeLists.txt  Kconfig.projbuild  taskStmp.c  taskStmp.h
components/wifi/: CMakeLists.txt  wifi.c  wifi.h
main/: CMakeLists.txt  Kconfig.projbuild  advanced_https_ota_example.c  main.c  main.h
